<resources>
    <string name="app_name">TripMessenger</string>
    <string name="firstName">First name:</string>
    <string name="lastName">Last name:</string>
    <string name="gender">Gender:</string>
    <string name="changeAvatar">Change avatar</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="editProfile">Edit Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="manageFriends">Manage Friend Requests</string>
    <string name="tripName">Trip Name:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="loaction">Location:</string>
    <string name="tripMembers">Trip Members:</string>
    <string name="friendsName">Friend\'s name</string>
    <string name="add">Add</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="pending">Pending</string>
    <string name="approve">Approve</string>
    <string name="editTrip">Edit Trip</string>
    <string name="enterChat">Enter Chatroom</string>
    <string name="city">City:</string>
    <string name="hintLocation">City, State</string>
    <string name="changeTripImage">Change Trip Image</string>
    <string name="owner">Owner:</string>
    <string name="post">Post .....</string>
    <string name="leaveChat">Leave Trip</string>
    <string name="userProfilePicture">User Profile Picture</string>
    <string name="createTrip">Create new Trip</string>
    <string name="tripOwner">Owner</string>
    <string name="tripsbelongto">Trips Belong To</string>
    <string name="tripMember">Trips:</string>
    <string name="logginInProgress">Log in In Progress</string>
    <string name="title_activity_route">Map</string>
    <string name="addPlace">Add New Place</string>
    <string name="viewRoute">View route</string>
    <string name="google_maps_key">AIzaSyB7MEH9IB_NyOdhLX_b9lK-zhZVCuUvcSA</string>
    <string name="ViewPlaces">View Places</string>
    <string name="title_activity_view_places">Places</string>
</resources>
