<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tripAddPlace"
        android:title="@string/addPlace" />
    <item
        android:id="@+id/viewPlaces"
        android:title="@string/ViewPlaces" />
    <item
        android:id="@+id/edtiTripView"
        android:title="@string/editTrip"
        android:visible="false" />

    <item
        android:id="@+id/viewRoute"
        android:title="@string/viewRoute" />
    <item
        android:id="@+id/leaveTripMenu"
        android:title="@string/leaveChat" />
    <item
        android:id="@+id/goToChatMenuTrip"
        android:title="@string/enterChat" />
    <item
        android:id="@+id/signOutTripViewMenu"
        android:title="@string/signOut" />
</menu>