<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joyrasmussen.tripmessenger.EditTripActivity">

    <TextView
        android:id="@+id/tripNameTVEditTrip"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tripNameETEditTrip"
        android:layout_alignBottom="@+id/tripNameETEditTrip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tripName"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/tripNameETEditTrip"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/uploadImageButton"
        android:layout_alignStart="@+id/uploadImageButton" />

    <TextView
        android:id="@+id/locationTVTripEdit"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/locationETTripEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/loaction"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/locationETTripEdit"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignLeft="@+id/tripNameETEditTrip"
        android:layout_alignStart="@+id/tripNameETEditTrip"
        android:layout_below="@+id/tripNameETEditTrip"
        android:ems="10"
        android:hint="@string/hintLocation"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/uploadImageButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/common_google_signin_btn_icon_dark"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:onClick="upload"
        android:text="@string/changeTripImage"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/cancelProfilebutton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/tripNameTVEditTrip"

            android:layout_toRightOf="@+id/tripNameTVEditTrip"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/updateProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/cancelProfilebutton"
            android:layout_toRightOf="@+id/cancelProfilebutton"
            android:layout_weight="1"
            android:onClick="update"
            android:text="@string/update" />
    </LinearLayout>
</RelativeLayout>
