<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joyrasmussen.tripmessenger.UserFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:id="@+id/detailLayoutFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profilePictureFrag"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/userProfilePicture"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/profilePictureFrag"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/newTripFragments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/createTrip" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragmentRecylerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/newTripFragments"
            android:layout_below="@+id/usersTripsUser"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/usersTripsUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/profilePictureFrag"
            android:layout_margin="10dp"
            android:text="@string/tripMember"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RelativeLayout>


</FrameLayout>
